# CS302_OS

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  LICENSE_CC_BY_NC_SA_V4.md  README.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: test.yml
CS162_Berkley_exams/practice/: fa19-final-alt.md
cmake/: util.cmake
final_pre/: README.md  paper.md  paper_v2.md
include/: CS302_redirect.hpp  CS302_timer.hpp  catch_main.hpp  public.hpp
lab01_code/: CMakeLists.txt  Makefile  hello.c  opt.c  opt1.s  sqrt.c
lab02_report01/: conclusion.md
lab02_report01/opts/: opt.c
lab02_report01/question_11/: opt0_3.s  opt1_3.s
lab02_report01/question_12/: README.md  lab1_user.sh  test_case.sh  test_case_2.sh  testing.sh
lab02_report01/question_12/hard_testcase/: trees.ans  unzip.ans
lab02_report01/question_1_10/: report_1_10.md
lab03_code/: .gitignore  ABC  ABC.c  CMakeLists.txt  Makefile  exec  exec.c  fork  fork.c  getpid  getpid.c  nwait  nwait.c  pfork  pfork.c  pipe  pipe.c  pipe2  signal  signal.c  wait  wait.c
lab03_report02/: fork  fork.c  overview.md  pipe  pipe.c  sys.c
lab04_code/Lab3_exercise_code/: mq_write.c  share_file_write.c  time_example1.c  time_example2.c  time_example3.c
lab04_code/Lab3_exercise_code_answers/: fork_detail.c  fork_exec.c  fork_exec2.c  mq_read.c  mq_write.c  share_file_fwrite.c  time_example1.c  time_example2.c  time_example3.c  wait_exit.c
lab04_code/lab3_exercise_code_answers/: CMakeLists.txt  fork_exec.c  fork_exec2.c  mq_read.c  mq_write.c  share_file_fwrite.c  share_file_write.c  time_example2.c  time_example3.c  wait_exit.c
lab05_code/: CMakeLists.txt  Makefile  openmp1.c  openmp2.c  thread.c
lab05_report03/: deq.c  enq.c  job.h  scheduler.c  stat.c
lab05_report03/report/: report03.md
lab05_report03/src/: CMakeLists.txt  deq.c  job.h  pid_to_name.c  scheduler.c  scheduler_origin.c  stat.c  test.c  test_setitimer.c
lab06_code/: CMakeLists.txt  fridge  milk.c  milk.cpp  producer_consumer.c  producer_consumer.cpp  semaphore.c  semaphore.cpp
lab06_report04/: report04.md
lab06_report04/src/: init.h  read.h
lab08_report05/: README.md  report05.md
lab08_report05/src/: .gitignore  CMakeLists.txt  Sample0.out  Sample1.in  Sample2.in  Sample3.in  Sample3.out  Sample4.in  Sample5.out  banker.cpp
lab09_report06/: README.md  report06.md
lab09_report06/src/: CMakeLists.txt  allocated_block.hpp  functions.hpp  mm.cpp
midterm_2019/: README.md  midterm_2019.md
report1/opts/: opt.c  opt0.s  opt0_2.s  opt1_2.s
report1/question12_open/: baseline.sh  lab1_ques12.sh  test_case.sh
report1/test_cases/: baseline.sh  lab1_11711815.sh  practices.sh  test_2.sh  test_case.sh
report_01_lab02/question_11/: .gitignore  Makefile  analysis.md  opt.c
report_01_lab02/question_12/: answer.ans  baseline.sh  lab1_user.sh  testing.sh
report_01_lab02/question_1_10/: pictures_1_11.md  report_1_10.md
report_02/: overview.md  process  process.c  signal  signal.c
report_02_lab03/: CMakeLists.txt  fork.c  overview.md  pipe.c  process.c  signal.c  sys.c
report_03_lab05/report/: report03.md  test.c
report_03_lab05/src/: CMakeLists.txt  deq.c  enq.c  job.h  pid_to_name.c  scheduler.c  scheduler_origin.c  test.c  test_setitimer.c
report_04_lab06/src/: CMakeLists.txt  Main_file.c  init.h  output_sample.txt  write.h
report_05_lab08/: .gitignore  README.md
report_05_lab08/data/: 00.test.out  01.data.out  03.data.out  04.test.out  05.test.out  06.data.in  06.test.out  07.data.in  07.data.out  08.data.in  08.data.out  08.test.out  09.data.in  09.data.out  09.test.out  Sample0.in  Sample4.out  Sample5.in  judge.sh
report_05_lab08/src/: Banker.cpp  Banker_Test.cpp  Banker_struct.hpp  CMakeLists.txt
report_06_lab09/: README.md  report06.md
report_06_lab09/src/: CMakeLists.txt  free_block.hpp  mm.cpp
report_07/: README.md  report_07.md
report_07/datas/: 3.in.txt  sample.out.txt
report_07/src/: 1.in.txt  2.in.txt  CMakeLists.txt  pr.cpp  sample.in.txt
report_08/: README.md  report_08.md
report_08/datas/: 02.in.txt  1.in.txt  3.in.txt  example.in.txt  example.out.txt
report_08/src/: CLOOK.cpp  CMakeLists.txt  disk.cpp  disk_Test.cpp
report_09/: notes_lec12.md  report_09.md
week1/: test_case.sh
week1/c_s/: hello.c
week1/practices/: sqrt
week1/test_case/: answer.file  baseline.sh  lab1_11711815.sh
week1/test_cases/: lab1_11711815.sh  test_2.sh  test_case.sh
week1/willbedelete/: hello  hello.s  opt.c  opt2.s  sqrt.c
期末复习/: .gitignore  期末复习.md
